2007-01-18  Ben Smith <jaminben@email.unc.edu>
	* bioforceGUI.fig: Removed DNA-related buttons and boxes.  Rearranged buttons for a more compact, toolbar-like interface.
	* * bioforceGUI.m: same.

2006-08-16  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.m: added more statistics to report to stdout when making fits.

2006-07-05  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.fig: Added text box that sets the number of modes for fitting to a Kelvin Voight fluid model.
	* bioforceGUI.m: same. 

2005-11-20  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.fig: Added fields that report total distance translated/recovered.
	* bioforceGUI.m: same.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.fig: Added r-square value for linear slope estimate.
	* bioforceGUI.m: same.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.fig: Added.  GUI for common analysis tools like measuring slopes, relaxation times, ranges, etc...
	* bioforceGUI.m: Added. same.